flapivor/tests/m1/hopix/parser/good/102-ref-4.hopix
val main =
  val y = ref (fun (x) => x);
  y