flapivor/tests/m1/hopix/parser/bad/101-ref-3.hopix
val main =
 val x = ref 0;
